Update Cathodoluminescence (CL) Data Processing.ipynb

--- a/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
+++ b/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
@@ -170,7 +170,7 @@
     "    print(\"Sample name:\", name)\n",
     "    print(\"HAADF:\", \"Found\" if HAADF is not None else \"Not found\")\n",
     "    print(\"EDX:\", \"Found\" if EDS is not None else \"Not found\")\n",
-    "    print(\"CL map:\", \"Found\" if CL is not None else \"Not found in the dataset (Cant continue the processing of CL data using this script)\")\n",
+    "    print(\"CL map:\", \"Found\" if CL is not None else \"Not found in the dataset (can't continue the processing of CL data using this script)\")\n",
     "    print(\"------------------------------------------------------\")\n"
    ]
   },
@@ -222,7 +222,7 @@
    "id": "e56a4f36-6501-4722-8805-427fc1742842",
    "metadata": {},
    "source": [
-    "#### When plotting the signal below: if you cant use the keyboard arrows to navigate through the signal or navigation axes, try to drag the small red square (shown in figure 2 below in the top left corner of the CL map) by holding the right click on the mouse "
+    "#### When plotting the signal below: if you can't use the keyboard arrows to navigate through the signal or navigation axes, try to drag the small red square (shown in figure 2 below in the top left corner of the CL map) by holding the right click on the mouse "
    ]
   },
   {
@@ -243,7 +243,7 @@
     "# <a id='crop'></a> 3. Crop negative values and cap the intensity of pixels with extreme intensity (if needed)\n",
     "\n",
     "<img src=\"images/high intensity capping in CL data.png\" style=\"height:400px;\">\n",
-    "Figure 2: Cropping wavelengths counts with extremly high intensities (due to artifacts) as it will affect the components in PCA.\n"
+    "Figure 2: Cropping wavelengths counts with extremely high intensities (due to artifacts) as it will affect the components in PCA.\n"
    ]
   },
   {
@@ -346,7 +346,7 @@
     "# <a id='pca'></a> 4. Apply PCA decomposition on the CL map\n",
     "\n",
     "<img src=\"images/PCA on CL data.png\" style=\"height:450px;\">\n",
-    "Figure 3: Cropping wavelengths counts with extremly high intensities (due to artifacts) as it will affect the components in PCA.\n"
+    "Figure 3: Cropping wavelengths counts with extremely high intensities (due to artifacts) as it will affect the components in PCA.\n"
    ]
   },
   {
@@ -380,7 +380,7 @@
    "source": [
     "## Plot the scree plot and the individual components:\n",
     "\n",
-    "#### After plotting the decomposition results below: if you cant navigate between the components using the keyboard arrows, use the slider bar opened in 3rd smal window or in the notebook itself as shown in figure 4 below."
+    "#### After plotting the decomposition results below: if you can't navigate between the components using the keyboard arrows, use the slider bar opened in 3rd smal window or in the notebook itself as shown in figure 4 below."
    ]
   },
   {
