Update Cathodoluminescence (CL) Data Processing.ipynb

--- a/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
+++ b/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
@@ -380,7 +380,7 @@
    "source": [
     "## Plot the scree plot and the individual components:\n",
     "\n",
-    "#### After plotting the decomposition results below: if you can't navigate between the components using the keyboard arrows, use the slider bar opened in 3rd smal window or in the notebook itself as shown in figure 4 below."
+    "#### After plotting the decomposition results below: if you can't navigate between the components using the keyboard arrows, use the slider bar opened in 3rd small window or in the notebook itself as shown in figure 4 below."
    ]
   },
   {
