--- a/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
+++ b/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "b79b9049",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "2a712029",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "dd869bf6",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "8ae8e213",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "05c66b6f",
    "metadata": {},
    "outputs": [
@@ -357,18 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "4d093de3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assuming 'cl_data' is your 3D CL dataset\n",
-    "CL_data_clipped = np.clip(CL, a_min=0, a_max=None) #None   #top_50_intensities_sorted.mean()"
+    "CL_data_clipped = np.clip(CL_data_clipped, a_min=0, a_max=None) #None   #top_50_intensities_sorted.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "85bdc37e",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "c85f4dd8",
    "metadata": {},
    "outputs": [
@@ -424,14 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "6f8f3dfc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf1992868d914613a9d567820bb5ef29",
+       "model_id": "8e78d38da2c54c35858bd8ab0097ce05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +448,7 @@
        "<Axes: title={'center': 'PCA_TestData_03_RedBlue_5kV_HighNoise\\nPCA Scree Plot'}, xlabel='Principal component index', ylabel='Proportion of variance'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "ee02c2da",
    "metadata": {},
    "outputs": [],
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "01f0481b",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (50, 50|167)>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "00a51a02",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "78a59f61",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (50, 50|167)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "id": "c078c989",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (|167)>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "id": "41cd3230",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (|167)>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "f76ad9fb",
    "metadata": {},
    "outputs": [],
@@ -618,36 +618,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "06ff2a63",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16884\\181206029.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mCL1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maxes_manager\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msignal_axes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'name'"
-     ]
-    }
-   ],
-   "source": [
-    "CL1.axes_manager.signal_axes.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a984884",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "1346cca6",
    "metadata": {},
@@ -657,21 +627,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "a0b8a3d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwrite 'C:\\Users\\bqahtan\\Desktop\\2022\\KAUST Projects\\3 CL datasets\\PCA_TestData_03_RedBlue_5kV_HighNoise  (PCA denoised).hspy' (y/n)?\n",
+      "y\n"
+     ]
+    }
+   ],
    "source": [
     "CLdata.save(name+\"  (PCA denoised).hspy\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f81072ea-1ae9-4b4e-81bd-8eaa5e244adc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
