--- a/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
+++ b/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "b79b9049",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "2a712029",
    "metadata": {},
    "outputs": [
@@ -100,6 +100,7 @@
     }
    ],
    "source": [
+    "Data_clipped=0\n",
     "# Specify the directory path\n",
     "directory = os.getcwd()\n",
     "\n",
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "dd869bf6",
    "metadata": {},
    "outputs": [],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "8ae8e213",
    "metadata": {},
    "outputs": [],
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "05c66b6f",
    "metadata": {},
    "outputs": [
@@ -252,7 +253,8 @@
     "# Step 2: Remove spikes using the observed threshold\n",
     "CL_copy.spikes_removal_tool(threshold=200, interactive=False)\n",
     "CL_data_clipped=CL_copy\n",
-    "CL_data_clipped.plot()"
+    "CL_data_clipped.plot()\n",
+    "Data_clipped=1"
    ]
   },
   {
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "cea22191",
    "metadata": {},
    "outputs": [],
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "38d15120",
    "metadata": {},
    "outputs": [
@@ -303,7 +305,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "d449aef0",
    "metadata": {},
    "outputs": [
@@ -325,7 +327,7 @@
        "854.2831"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,12 +339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "1033681d",
    "metadata": {},
    "outputs": [],
    "source": [
     "CL_data_clipped = np.clip(CL, a_min= None,a_max=top_30_intensities_sorted.mean())#None   #top_50_intensities_sorted.mean()\n",
+    "Data_clipped=1\n",
     "CL_data_clipped.plot()"
    ]
   },
@@ -357,18 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "4d093de3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming 'cl_data' is your 3D CL dataset\n",
-    "CL_data_clipped = np.clip(CL_data_clipped, a_min=0, a_max=None) #None   #top_50_intensities_sorted.mean()"
+    "# Check if the CL data has been clipped (altered):\n",
+    "\n",
+    "if Data_clipped ==0: # if CL data not altered, remove negative values of the original CL dataset\n",
+    "    CL_data_clipped = np.clip(CL, a_min=0, a_max=None) #None   #top_50_intensities_sorted.mean()    \n",
+    "\n",
+    "else:# Otherwise remove negative values of the processed CL dataset (spikes removed)\n",
+    "    CL_data_clipped = np.clip(CL_data_clipped, a_min=0, a_max=None) #None   #top_50_intensities_sorted.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "85bdc37e",
    "metadata": {},
    "outputs": [],
@@ -390,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "c85f4dd8",
    "metadata": {},
    "outputs": [
@@ -424,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "6f8f3dfc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e78d38da2c54c35858bd8ab0097ce05",
+       "model_id": "86e125af40ea47e594c75eb665a94aa4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +456,7 @@
        "<Axes: title={'center': 'PCA_TestData_03_RedBlue_5kV_HighNoise\\nPCA Scree Plot'}, xlabel='Principal component index', ylabel='Proportion of variance'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "ee02c2da",
    "metadata": {},
    "outputs": [],
@@ -493,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "01f0481b",
    "metadata": {},
    "outputs": [
@@ -503,7 +511,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (50, 50|167)>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "00a51a02",
    "metadata": {},
    "outputs": [],
@@ -524,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "78a59f61",
    "metadata": {},
    "outputs": [
@@ -534,7 +542,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (50, 50|167)>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "c078c989",
    "metadata": {},
    "outputs": [
@@ -555,7 +563,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (|167)>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "41cd3230",
    "metadata": {},
    "outputs": [
@@ -577,7 +585,7 @@
        "<CLSpectrum, title: PCA_TestData_03_RedBlue_5kV_HighNoise model from decomposition with 2 components, dimensions: (|167)>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "f76ad9fb",
    "metadata": {},
    "outputs": [],
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "a0b8a3d3",
    "metadata": {},
    "outputs": [
